--- a/apps/bank-webhook/package.json
+++ b/apps/bank-webhook/package.json
@@ -14,8 +14,10 @@
   "description": "",
   "dependencies": {
     "@repo/db": "*",
-    "@types/express": "^5.0.1",
     "esbuild": "^0.25.2",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.1"
   }
 }
